  console.

- Added support for untruncated MD5 and SHA1 HMACs in ESP as used in
  RFC 4595.

- The cmac plugin implements the AES-CMAC-96 and AES-CMAC-PRF-128 algorithms
  as defined in RFC 4494 and RFC 4615, respectively.

- The resolve plugin automatically installs nameservers via resolvconf(8),
  if it is installed, instead of modifying /etc/resolv.conf directly.

strongswan-4.6.2
----------------

- Upgraded the TCG IF-IMC and IF-IMV C API to the upcoming version 1.3
  which supports IF-TNCCS 2.0 long message types, the exclusive flags
  and multiple IMC/IMV IDs. Both the TNC Client and Server as well as
  the "Test", "Scanner", and "Attestation" IMC/IMV pairs were updated.

- Fully implemented the "TCG Attestation PTS Protocol: Binding to IF-M"
  standard (TLV-based messages only). TPM-based remote attestation of
  Linux IMA (Integrity Measurement Architecture) possible. Measurement
  reference values are automatically stored in an SQLite database.

- The EAP-RADIUS authentication backend supports RADIUS accounting. It sends
  start/stop messages containing Username, Framed-IP and Input/Output-Octets
  attributes and has been tested against FreeRADIUS and Microsoft NPS.

- Added support for PKCS#8 encoded private keys via the libstrongswan
  pkcs8 plugin.  This is the default format used by some OpenSSL tools since
  version 1.0.0 (e.g. openssl req with -keyout).

- Added session resumption support to the strongSwan TLS stack.


strongswan-4.6.1
----------------

- Because of changing checksums before and after installation which caused
  the integrity tests to fail we avoided directly linking libsimaka, libtls and
  libtnccs to those libcharon plugins which make use of these dynamic libraries.
  Instead we linked the libraries to the charon daemon. Unfortunately Ubuntu
  11.10 activated the --as-needed ld option which discards explicit links
  to dynamic libraries that are not actually used by the charon daemon itself,